Superclass related bugfixes in the template

--- a/bindgen/template.j2
+++ b/bindgen/template.j2
@@ -5,14 +5,14 @@
 {%- endmacro -%}
 
 {%- macro pointer(cls) -%}
-    {%- if cls.superclass == "Standard_Transient" -%} ,opencascade::handle<{{cls.name}}>
+    {%- if cls.rootclass == "Standard_Transient" -%} ,opencascade::handle<{{cls.name}}>
     {%- elif cls.nonpublic_destructors|length>0 -%} ,std::unique_ptr<{{cls.name}}, py::nodelete>
     {%- else -%} ,std::unique_ptr<{{cls.name}}>
     {%- endif -%}
 {%- endmacro -%}
 
-{%- macro super(cls) -%}
-    {% if cls.rootclass %}, {{cls.superclass}} {% endif %}
+{%- macro super(cls,classes) -%}
+    {% if cls.superclass in classes %}, {{cls.superclass}} {% endif %}
 {%- endmacro -%}
 
 
@@ -87,7 +87,7 @@ PYBIND11_MODULE({{module.name}}, m) {
 
 // classes
 {% for c in module.classes %}{% if not c.abstract %}
-    py::class_<{{c.name}} {{pointer(c)}} {{super(c)}}>(m,"{{cls_name(c)}}",R"#({{c.comment}})#")
+    py::class_<{{c.name}} {{pointer(c)}} {{super(c,module.classes)}}>(m,"{{cls_name(c)}}",R"#({{c.comment}})#")
     {% for con in c.constructors %}
         .def(py::init< {{ argtypes(con) }} >() {{argnames(con)}} )
     {% endfor %}
