--- a/bindgen/template.j2
+++ b/bindgen/template.j2
@@ -17,7 +17,7 @@
 
 
 {%- macro argtypes(f) -%}
-    {% for _,t in f.args %} {{ t }}{{ "," if not loop.last }}{% endfor %}
+    {% for _,t in f.args %}{{ t }}{{ "," if not loop.last }}{% endfor %}
 {%- endmacro -%}
 
 {%- macro argnames(f) -%}
@@ -34,6 +34,29 @@
 
 {%- macro function_pointer(f) -%}
     ({{f.return_type}} (*)({% for _,t in f.args %} {{t}} {{ "," if not loop.last }} {% endfor %}))  static_cast<{{f.return_type}} (*)({% for _,t in f.args %} {{t}} {{ "," if not loop.last }} {% endfor %})>(&{{f.name}})
+{%- endmacro -%}
+
+{%- macro template_args_typename(t) -%}
+    <{% for type,name in t.type_params %}{% if type %}{{ type }}{% else %}typename{% endif %} {{name}}{{ "," if not loop.last }}{% endfor %}>
+{%- endmacro -%}
+
+{%- macro template_args(t) -%}
+    <{% for type,name in t.type_params %}{{name}}{{ "," if not loop.last }}{% endfor %}>
+{%- endmacro -%}
+
+{%- macro template_method_pointer(cls,f) -%}
+    ({{f.return_type}} ({{cls.name}}{{template_args(cls)}}::*)({% for _,t in f.args %} {{t}} {{ "," if not loop.last }} {% endfor %}) {{ "const" if f.const }}) &{{cls.name}}{{template_args(cls)}}::{{f.name}}
+{%- endmacro -%}
+
+{%- macro template_static_method_pointer(cls,f) -%}
+    ({{f.return_type}} (*)({% for _,t in f.args %} {{t}} {{ "," if not loop.last }} {% endfor %}) {{ "const" if f.const }}) &{{cls.name}}{{template_args(cls)}}::{{f.name}}
+{%- endmacro -%}
+
+{%- macro template_pointer(cls) -%}
+    {%- if cls.rootclass == "Standard_Transient" or cls.name == "Standard_Transient" -%} ,opencascade::handle<{{cls.name}}{{template_args(cls)}}>
+    {%- elif cls.nonpublic_destructors|length>0 -%} ,std::unique_ptr<{{cls.name}}{{template_args(cls)}}, py::nodelete>
+    {%- else -%} ,std::unique_ptr<{{cls.name}}{{template_args(cls)}}>
+    {%- endif -%}
 {%- endmacro -%}
 
 {# end of macros macros -#}
@@ -66,7 +89,7 @@ namespace py = pybind11;
 void register_{{module.name}}(py::module &main_module) {
 
 py::module m = main_module.def_submodule("{{module.name}}", R"#({{module.doc}})#");
-    
+
 // enums
 {% for enum in module.enums %}
 {% if enum.anonymous %}
@@ -137,6 +160,41 @@ register_occ_exception<{{ex.name}}>(m, "{{ex.name}}");
 {% endfor %}
 
 }
+
+// Class template handling functions
+{% for h in module.headers %}
+// {{h.name}}
+{% for n,t in h.class_templates.items()%}
+
+template {{template_args_typename(t)}}
+void register_template_{{t.name}}(py::object m, const char *name){
+    py::class_<{{t.name}}{{template_args(t)}} {{template_pointer(t)}} {{super(t,module.classes)}}>(m,name,R"#({{t.comment}})#")
+    {% for con in t.constructors %}
+        .def(py::init< {{ argtypes(con) }} >() {{argnames(con)}} )
+    {% endfor %}
+    {% for m in t.methods if not references_inner(m)%}
+        .def("{{m.name}}",
+             {{ template_method_pointer(t,m) }},
+             R"#({{m.comment}})#" {{argnames(m)}})
+    {% endfor %}
+    {% for m in t.static_methods %}
+        .def_static("{{m.name}}_s",
+                    {{ template_static_method_pointer(t,m) }},
+                    R"#({{m.comment}})#" {{argnames(m)}})
+    {% endfor %}
+    {% for op in t.operators %}
+    {% if op.name in operator_dict %}
+    {% for py_op in operator_dict[op.name] %}
+        .def("{{py_op}}",
+             {{ template_method_pointer(t,op) }},
+             py::is_operator(),
+             R"#({{op.comment}})#" {{argnames(op)}})
+    {% endfor %}
+    {% endif %}
+    {% endfor %};
+};
+{% endfor %}
+{% endfor %}
 
 // user-defined post
 {% if include_post %}
