--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -61,17 +61,23 @@ py::module m = main_module.def_submodule("{{module.name}}", R"#({{module.doc}})#
 {% for c in module.classes %}{#% if not c.abstract %#}
     py::class_<{{c.name}} {{pointer(c)}} {{super(c,module.classes)}}>(m,"{{cls_name(c)}}",R"#({{c.comment}})#")
     {% for con in c.constructors %}
+    {% if not con.pointer_by_ref %}
         .def(py::init< {{ argtypes(con) }} >() {{argnames(con)}} )
+    {% endif %}
     {% endfor %}
     {% for m in c.methods %}
+    {% if not m.pointer_by_ref %}
         .def("{{m.name}}",
              {{ method_pointer(c,m) }},
              R"#({{m.comment}})#" {{argnames(m)}})
+    {% endif %}
     {% endfor %}
     {% for m in c.static_methods %}
+    {% if not m.pointer_by_ref %}
         .def_static("{{m.name}}_s",
                     {{ static_method_pointer(c,m) }},
                     R"#({{m.comment}})#" {{argnames(m)}})
+    {% endif %}
     {% endfor %}
     {% for op in c.operators %}
     {% if op.name in operator_dict %}
