--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -58,7 +58,7 @@ py::module m = main_module.def_submodule("{{module.name}}", R"#({{module.doc}})#
 {% endfor %}
 
 // classes
-{% for c in module.classes %}{#% if not c.abstract %#}
+{% for c in module.classes %}{% if (proper_new_operator(c) and proper_delete_operator(c)) or c.rootclass =='Standard_Transient' %}
     py::class_<{{c.name}} {{pointer(c)}} {{super(c,module.classes)}}>(m,"{{cls_name(c)}}",R"#({{c.comment}})#")
     {% for con in c.constructors %}
     {% if not con.pointer_by_ref %}
@@ -89,7 +89,7 @@ py::module m = main_module.def_submodule("{{module.name}}", R"#({{module.doc}})#
     {% endfor %}
     {% endif %}
     {% endfor %};
-{#% endif %#}{% endfor %}
+{% endif %}{% endfor %}
 
 // functions
 {% for h in module.headers %}
