--- a/bindgen/makefile.j2
+++ b/bindgen/makefile.j2
@@ -3,7 +3,7 @@ RM = rm -f
 CPPFLAGS = -D_GLIBCXX_USE_CXX11_ABI=0 $(shell python3 -m pybind11 --includes) -I${CONDA_PREFIX}/include/opencascade
 CXXFLAGS = -O3 -Wall --std=c++11 -fPIC  -g -fpermissive
 LDFLAGS = -g -shared -L${CONDA_PREFIX}/lib
-LDLIBS = -l:libTKMath.so -l:libTKernel.so -l:libTKG2d.so -l:libTKG3d.so -l:libTKGeomBase.so -l:libTKBRep.so -l:libTKGeomAlgo.so -l:libTKTopAlgo.so -l:libTKPrim.so -l:libTKShHealing.so -l:libTKHLR.so -l:libTKMesh.so -l:libTKBO.so -l:libTKBool.so -l:libTKFeat.so -l:libTKOffset.so -l:libTKXSBase.so
+LDLIBS = -l:libTKMath.so -l:libTKernel.so -l:libTKG2d.so -l:libTKG3d.so -l:libTKGeomBase.so -l:libTKBRep.so -l:libTKGeomAlgo.so -l:libTKTopAlgo.so -l:libTKPrim.so -l:libTKShHealing.so -l:libTKHLR.so -l:libTKMesh.so -l:libTKBO.so -l:libTKBool.so -l:libTKFeat.so -l:libTKOffset.so -l:libTKFillet.so -l:libTKGeomAlgo.so -l:libTKHLR.so -l:libTKMesh.so -l:libTKOffset.so -l:libTKPrim.so -l:libTKShHealing.so -l:libTKTopAlgo.so -l:libTKXMesh.so -l:libTKXSBase.so
 
 SRC=$(wildcard *.cpp)
 OBJ=$(subst .cpp,.o,$(SRC))
@@ -16,6 +16,9 @@ all: {{name}}
 
 clean:
 	$(RM) $(OBJ) $(TARGET)
+	
+check:
+	$(LD) $(TARGET) 2>&1
     
 test:
 	ipython -i -c"import {{name}}"
