--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -1,6 +1,7 @@
 {% from "macros.j2" import cls_name,pointer,super,argtypes,argnames,method_pointer,
 static_method_pointer,function_pointer,template_args_typename,template_args,
-template_method_pointer,template_static_method_pointer, template_pointer %}
+template_method_pointer,template_static_method_pointer, template_pointer,
+prototype, pybind_overload %}
 
 // pybind 11 related includes
 #include <pybind11/pybind11.h>
@@ -57,9 +58,21 @@ py::module m = main_module.def_submodule("{{module.name}}", R"#({{module.doc}})#
 {% endif %}
 {% endfor %}
 
+//Python trampoline classes
+{% for c in module.classes %}{% if c.abstract %}
+    class Py_{{c.name}} : public {{c.name}}{
+    public:
+        using {{c.name}}::{{c.name}};
+        
+        {% for m in c.methods %}{% if m.pure_virtual %}
+        {{ prototype(m) }}{ {{pybind_overload(c,m)}} };
+        {% endif %}{% endfor %}
+    };
+{% endif %}{% endfor %}
+
 // classes
 {% for c in module.classes %}{% if (proper_new_operator(c) and proper_delete_operator(c)) or c.rootclass =='Standard_Transient' %}
-    py::class_<{{c.name}} {{pointer(c)}} {{super(c,class_dict)}}>(m,"{{cls_name(c)}}",R"#({{c.comment}})#")
+    py::class_<{{c.name}} {{pointer(c)}} {% if c.abstract %},Py_{{c.name}}{% endif %} {{super(c,class_dict)}}>(m,"{{cls_name(c)}}",R"#({{c.comment}})#")
     {% for con in c.constructors %}
     {% if not con.pointer_by_ref %}
         .def(py::init< {{ argtypes(con) }} >() {{argnames(con)}} )
