--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -39,8 +39,14 @@ namespace py = pybind11;
 #include "{{ include_pre }}"
 {% endif %}
 
+// user-defined inclusion per module
+{% if module_settings['include_header_pre'] %}
+{{ module_settings['include_header_pre'] }}
+{% endif %}
+
 // Module definiiton
 void register_{{module.name}}(py::module &main_module) {
+
 
 py::module m = main_module.def_submodule("{{module.name}}", R"#({{module.doc}})#");
 
@@ -64,6 +70,7 @@ py::module m = main_module.def_submodule("{{module.name}}", R"#({{module.doc}})#
     public:
         using {{c.name}}::{{c.name}};
         
+        // public pure virtual
         {% for m in c.methods %}{% if m.pure_virtual %}
         {{ prototype(m) }} override { {{pybind_overload(c,m)}} };
         {% endif %}{% endfor %}
@@ -71,6 +78,32 @@ py::module m = main_module.def_submodule("{{module.name}}", R"#({{module.doc}})#
         {% for super in c.superclasses %}
         {% for p in module.classes %}{% if super == p.name %}
         {% for m in p.methods %}{% if m.pure_virtual and m.name not in c.methods_dict%}
+        {{ prototype(m) }} override { {{pybind_overload(p,m)}} };
+        {% endif %}{% endfor %}
+        {% endif %}{% endfor %}
+        {% endfor %}
+        
+        // protected pure virtual
+        {% for m in c.protected_virtual_methods %}
+        {{ prototype(m) }} override { {{pybind_overload(c,m)}} };
+        {% endfor %}
+        
+        {% for super in c.superclasses %}
+        {% for p in module.classes %}{% if super == p.name %}
+        {% for m in p.protected_virtual_methods %}{% if m.name not in c.protected_virtual_methods_dict%}
+        {{ prototype(m) }} override { {{pybind_overload(p,m)}} };
+        {% endif %}{% endfor %}
+        {% endif %}{% endfor %}
+        {% endfor %}
+        
+        // private pure virtual
+        {% for m in c.private_virtual_methods %}
+        {{ prototype(m) }} override { {{pybind_overload(c,m)}} };
+        {% endfor %}
+        
+        {% for super in c.superclasses %}
+        {% for p in module.classes %}{% if super == p.name %}
+        {% for m in p.private_virtual_methods %}{% if m.name not in c.private_virtual_methods_dict%}
         {{ prototype(m) }} override { {{pybind_overload(p,m)}} };
         {% endif %}{% endfor %}
         {% endif %}{% endfor %}
@@ -154,6 +187,11 @@ py::module m = main_module.def_submodule("{{module.name}}", R"#({{module.doc}})#
 {% for ex in module.exceptions %}
 register_occ_exception<{{ex.name}}>(m, "{{ex.name}}");
 {% endfor %}
+
+// user-defined post-inclusion per module
+{% if module_settings['include_header_post'] %}
+{{ module_settings['include_header_post'] }}
+{% endif %}
 
 };
 
