Include pre in the main template

--- a/bindgen/template_main.j2
+++ b/bindgen/template_main.j2
@@ -4,6 +4,11 @@
 
 namespace py = pybind11;
 
+// user-defined pre
+{% if include_pre %}
+#include "{{ include_pre }}"
+{% endif %}
+
 // forward declaration of the register_* functions
 
 {% for mod in modules %}
