--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -100,7 +100,16 @@ py::module m = static_cast<py::module>(main_module.attr("{{module.name}}"));
 
 // classes
 {% for c in module.classes %}{% if (proper_new_operator(c) and proper_delete_operator(c)) or c.rootclass =='Standard_Transient' %}
-    static_cast<py::class_<{{c.name}} {{pointer(c)}} {% if c.abstract %},Py_{{c.name}}{% endif %} {{super(c,class_dict)}}>>(m.attr("{{cls_name(c)}}"))
+
+    auto cls = static_cast<py::class_<{{c.name}} {{pointer(c)}} {% if c.abstract %},Py_{{c.name}}{% endif %} {{super(c,class_dict)}}>>(m.attr("{{cls_name(c)}}"));
+
+    {% if not c.constrcutors %}
+    if constexpr (std::.is_default_constructible<cls>::value){
+        cls.def(py::init<const std::string &>());
+    }
+    {% endif %}
+
+    cls
     {% for con in c.constructors %}
     {% if not con.pointer_by_ref %}
         .def(py::init< {{ argtypes(con) }} >() {{argnames(con)}} )
