Don't  use the default ctor if non-public ctors were defined

--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -101,7 +101,7 @@ py::module m = static_cast<py::module>(main_module.attr("{{module.name}}"));
 // classes
 {% for c in module.classes %}{% if (proper_new_operator(c) and proper_delete_operator(c)) or c.rootclass =='Standard_Transient' %}
 
-    {% if not c.constructors and not c.abstract %}
+    {% if not c.constructors and not c.nonpublic_constructors and not c.abstract %}
     if constexpr (std::is_default_constructible<{{c.name}}>::value){
         static_cast<py::class_<{{c.name}} {{pointer(c)}} {% if c.abstract %},Py_{{c.name}}{% endif %} {{super(c,class_dict)}}>>(m.attr("{{cls_name(c)}}"))
             .def("__init__",[]({{c.name}} &self){ new (&self) {{c.name}}; });
