--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -12,13 +12,17 @@ namespace py = pybind11;
 // Standard Handle
 #include <Standard_Handle.hxx>
 
+{% if module_settings['include_header_pre_top'] %}
+{{ module_settings['include_header_pre_top'] }}
+{% endif %}
+
 // includes to resolve forward declarations
 {% for h in module.headers %}{% for f in h.forwards %}{% if f.name in class_dict %}
 #include <{{ class_dict[f.name].splitpath()[-1] }}>
 {% endif %}{% endfor %}{% endfor %}
 
 // module includes
-{% for h in module.headers %}
+{% for h in module.headers | sort(attribute='short_name') %}
 #include <{{ h.short_name }}>
 {% endfor %}
 
@@ -101,11 +105,8 @@ py::module m = static_cast<py::module>(main_module.attr("{{module.name}}"));
 // classes
 {% for c in module.classes %}{% if (proper_new_operator(c) and proper_delete_operator(c)) or c.rootclass =='Standard_Transient' %}
 
-    {% if not c.constructors and not c.nonpublic_constructors and not c.abstract %}
-    if constexpr (std::is_default_constructible<{{c.name}}>::value){
-        static_cast<py::class_<{{c.name}} {{pointer(c)}} {% if c.abstract %},Py_{{c.name}}{% endif %} {{super(c,class_dict)}}>>(m.attr("{{cls_name(c)}}"))
-            .def("__init__",[]({{c.name}} &self){ new (&self) {{c.name}}; });
-    }
+    {% if not c.constructors_unfiltered and not c.nonpublic_constructors and not c.abstract %}
+    register_default_constructor<{{c.name}} {{pointer(c)}}>(m,"{{c.name}}");
     {% endif %}
 
     static_cast<py::class_<{{c.name}} {{pointer(c)}} {% if c.abstract %},Py_{{c.name}}{% endif %} {{super(c,class_dict)}}>>(m.attr("{{cls_name(c)}}"))
